# CXL_motivation

./: CMakeLists.txt  Makefile  PerfEvent.c  access_bit_monitor.c  damon_monitor.c  llc.cpp  page.cpp  page_pebs.c  pebs_llc_miss.c  pebs_page_2.c
a_bit/: abm_userspace.c  pf_ebpf.py
chanel_ref/: channel.cpp  channel.h  channelset.cpp  channelset.h  common.h  test_channel  test_channel.cpp  test_channelset  test_channelset.cpp
cxl_test/: build_qemu.sh  create_region.sh  cxl_mem.cpp  download_ubuntu.sh  get_config.cpp  tmpfs_mem.cpp
docker/: Dockerfile
kernel_module/: Makefile  abm.c  damon_monitor.c
pebs_monitor/: ChanelSet.cpp  PerfEvent.cpp  page_pebs_base.cpp  page_pebs_basic_test.c
tests/: a.out  pebs_monitor.c  test_llc_dtlb.cpp
